# src/services/tracks/dto/update-track.dto.ts
@@ -1,7 +1,8 @@
-import { IsString, IsOptional, IsInt, IsUUID } from 'class-validator';
+import { IsString, IsOptional, IsInt, IsUUID, Min } from 'class-validator';
 import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IUpdateTrackDto } from '../../../interfaces/track.interfaces';
 
-export class UpdateTrackDto {
+export class UpdateTrackDto implements IUpdateTrackDto {
     @ApiPropertyOptional({
         description: 'Track name',
         example: 'Updated Track Name',
@@ -11,15 +12,16 @@ export class UpdateTrackDto {
     name?: string;
 
     @ApiPropertyOptional({
-        description: 'Duration of the track in seconds',
+        description: 'Updated duration of the track in seconds',
         example: 240,
     })
     @IsInt()
+    @Min(1)
     @IsOptional()
     duration?: number;
 
     @ApiPropertyOptional({
-        description: 'UUID of the artist',
+        description: 'Updated UUID of the artist',
         example: '0a35dd62-e09f-444b-a628-f4e7c6954f57',
     })
     @IsUUID()
@@ -27,7 +29,7 @@ export class UpdateTrackDto {
     artistId?: string | null;
 
     @ApiPropertyOptional({
-        description: 'UUID of the album',
+        description: 'Updated UUID of the album',
         example: '0a35dd62-e09f-444b-a628-f4e7c6954f57',
     })
     @IsUUID()
